<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.cl.plane</groupId>
    <artifactId>plane-plan</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>planePlan</name>
    <description>航班项目</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
        <skipTests>true</skipTests>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.3.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <dependencies>
        <!--SpringBoot通用依赖模块-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>1.2.49</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>easyexcel</artifactId>
            <version>2.2.4</version>
        </dependency>

        <!--MyBatis分页插件-->
        <dependency>
            <groupId>com.github.pagehelper</groupId>
            <artifactId>pagehelper-spring-boot-starter</artifactId>
            <version>1.2.10</version>
        </dependency>
        <!--集成druid连接池-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid-spring-boot-starter</artifactId>
            <version>1.1.10</version>
        </dependency>
        <!-- MyBatis 生成器 -->
        <dependency>
            <groupId>org.mybatis.generator</groupId>
            <artifactId>mybatis-generator-core</artifactId>
            <version>1.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.16.10</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.7</version>
        </dependency>
        <!--Mysql数据库驱动-->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.15</version>
        </dependency>
        <!--整合Knife4j-->
        <dependency>
            <groupId>com.github.xiaoymin</groupId>
            <artifactId>knife4j-spring-boot-starter</artifactId>
            <version>2.0.4</version>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.200</version>
        </dependency>

    </dependencies>

    <profiles>
        <!--JVM的配置注意Java内存问题,考虑是后台计算还是实时服务-->
        <!-- dev -->
        <profile>
            <id>dev</id>
            <properties>
                <env>dev</env>
                <jvmSettings.initialMemorySize>256</jvmSettings.initialMemorySize>
                <jvmSettings.maxMemorySize>256</jvmSettings.maxMemorySize>
            </properties>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <!-- uat1 -->
        <profile>
            <id>uat1</id>
            <properties>
                <env>uat1</env>
                <jvmSettings.initialMemorySize>512</jvmSettings.initialMemorySize>
                <jvmSettings.maxMemorySize>512</jvmSettings.maxMemorySize>
            </properties>
        </profile>
        <!-- stag -->
        <profile>
            <id>stg</id>
            <properties>
                <env>stg</env>
                <jvmSettings.initialMemorySize>512</jvmSettings.initialMemorySize>
                <jvmSettings.maxMemorySize>512</jvmSettings.maxMemorySize>
            </properties>
        </profile>
        <!-- prd -->
        <profile>
            <id>prd</id>
            <properties>
                <env>pro</env>
                <jvmSettings.initialMemorySize>512</jvmSettings.initialMemorySize>
                <jvmSettings.maxMemorySize>512</jvmSettings.maxMemorySize>
            </properties>
        </profile>
        <!-- fat -->
        <profile>
            <id>fat</id>
            <properties>
                <env>fat</env>
                <jvmSettings.initialMemorySize>512</jvmSettings.initialMemorySize>
                <jvmSettings.maxMemorySize>512</jvmSettings.maxMemorySize>
            </properties>
        </profile>
    </profiles>

    <build>
<!--        <plugins>-->
<!--            <plugin>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
<!--            </plugin>-->
<!--        </plugins>-->
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.10</version>
                <configuration>
                    <repositoryLayout>flat</repositoryLayout>
                    <repositoryName>lib</repositoryName>
                    <configurationDirectory>conf</configurationDirectory>
                    <copyConfigurationDirectory>true</copyConfigurationDirectory>
                    <!--原配置，作用：将需要用到的配置文件在打包时复制到jsw生成的conf目录-->
                    <!--                    <configurationSourceDirectory>src/main/resources/env/${env}</configurationSourceDirectory>-->
                    <configurationSourceDirectory>src/main/resources/env/</configurationSourceDirectory>
                    <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                    <target>${project.build.directory}</target>
                    <daemons>
                        <daemon>
                            <id>${project.name}</id>
                            <!--启动加载类-->
                            <mainClass>com.macro.mall.tiny.PlanePlanApplication</mainClass>
                            <platforms>
                                <platform>jsw</platform>
                            </platforms>
                            <wrapperLogFile>logs/${project.name}.log</wrapperLogFile>
                            <generatorConfigurations>
                                <generatorConfiguration>
                                    <generator>jsw</generator>
                                    <includes>
                                        <include>macosx-universal-64</include>
                                        <include>linux-x86-32</include>
                                        <include>linux-x86-64</include>
                                        <include>windows-x86-32</include>
                                        <include>windows-x86-64</include>
                                    </includes>
                                    <configuration>
                                        <property>
                                            <name>configuration.directory.in.classpath.first</name>
                                            <value>conf</value>
                                        </property>
                                        <property>
                                            <name>set.default.REPO_DIR</name>
                                            <value>lib</value>
                                        </property>
                                        <property>
                                            <name>wrapper.ping.timeout</name>
                                            <value>300</value>
                                        </property>
                                        <property>
                                            <name>wrapper.startup.timeout</name>
                                            <value>300</value>
                                        </property>
                                    </configuration>
                                </generatorConfiguration>
                            </generatorConfigurations>
                            <jvmSettings>
                                <!--使用extraAreumeng 解决 appassembler-maven-plugin对内存的最大限制4096-->
                                <extraArguments>
                                    <!--用户自动配置中心环境-->
                                    <extraArgument>-Denv=${env}</extraArgument>
                                    <extraArgument>-server</extraArgument>
                                    <extraArgument>-Xms${jvmSettings.initialMemorySize}m</extraArgument>
                                    <extraArgument>-Xmx${jvmSettings.maxMemorySize}m</extraArgument>
                                    <extraArgument>-Djava.net.preferIPv4Stack=true</extraArgument>
                                    <extraArgument>-XX:+UseG1GC</extraArgument>
                                    <extraArgument>-XX:MaxGCPauseMillis=400</extraArgument>
                                    <extraArgument>-XX:InitiatingHeapOccupancyPercent=60</extraArgument>
                                    <extraArgument>-XX:+PrintGC</extraArgument>
                                    <extraArgument>-XX:+PrintGCDetails</extraArgument>
                                    <extraArgument>-XX:+PrintGCTimeStamps</extraArgument>
                                    <extraArgument>-XX:+PrintGCApplicationConcurrentTime</extraArgument>
                                    <extraArgument>-XX:+PrintGCApplicationStoppedTime</extraArgument>
                                    <extraArgument>-Xloggc:./logs/gc.log</extraArgument>
                                    <!--指定启动模式-->
                                    <extraArgument>-Dnewrelic.environment=${env}</extraArgument>
                                </extraArguments>
                            </jvmSettings>
                        </daemon>
                    </daemons>
                </configuration>
                <executions>
                    <execution>
                        <id>generate-jsw-scripts</id>
                        <phase>package</phase>
                        <goals>
                            <goal>generate-daemons</goal>
                            <goal>create-repository</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptor>assembly/bin.xml</descriptor>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <!-- 两个ID必须与 setting.xml中的<server><id>nexus-releases</id></server>保持一致-->
    <distributionManagement>
        <repository>
            <id>aijia-releases</id>
            <name>Release Repository</name>
            <url>${ReleaseRepository}</url>
        </repository>
        <snapshotRepository>
            <id>aijia-snapshots</id>
            <name>Snapshot Repository</name>
            <url>${SnapshotRepository}</url>
        </snapshotRepository>
    </distributionManagement>

</project>
